--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.game.taki/com.game.taki.HelloApplication</mainClass>
+                            <mainClass>com.game.taki/com.game.taki.StartScreenView</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
